fix: remove overflow

--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ body {
   .main {
     text-align: left;
     padding-left: 0;
-    overflow: scroll;
+    // overflow: scroll;
     .code-example {
       font-size: 1.7rem;
     }
